--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hybris-software/ui-kit",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "dist/index.js",
   "module": "dist/index.js",
@@ -8,7 +8,7 @@
     "build": "rm -rf dist && NODE_ENV=production babel src --out-dir dist --copy-files"
   },
   "repository": "Hybris-Software/ui-kit",
-  "author": "",
+  "author": "Hybris Software",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Hybris-Software/ui-kit/issues"
