--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hybris-software/ui-kit",
-  "version": "2.2.15",
+  "version": "2.2.24",
   "description": "",
   "main": "dist/index.js",
   "module": "dist/index.js",
@@ -22,9 +22,10 @@
     "@babel/cli": "^7.19.3",
     "@babel/core": "^7.19.3",
     "@babel/plugin-syntax-jsx": "^7.18.6",
-    "@babel/preset-env": "^7.19.4",
     "@babel/polyfill": "^7.12.1",
+    "@babel/preset-env": "^7.19.4",
     "@babel/preset-react": "^7.18.6",
+    "core-js": "^3.28.0",
     "react": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-loading-icons": "^1.1.0"
